# La_ruche

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  pyproject.toml
eval/: model_defaults.json
eval/src/eval/: bench_models.py
evals/: eval_harness.py  golden_dataset.json
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  keycloak.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx  Market.tsx  Portfolio.tsx  Voice.tsx
infra/clickhouse/: macros.xml
mobile/: package-lock.json  package.json  playwright.config.ts
mobile/e2e/: mobile.spec.ts
mobile/screens/: ChatScreen.tsx
plans/laruche-current-app/: plan.md  plan.mdx
qa-swarm/: README.md  ci_smoke.py  generate_report.py  pyproject.toml
qa-swarm/backoffice/: __init__.py  app.py
qa-swarm/backoffice/templates/: base.html  index.html  regression.html  report.html  scenarios.html
qa-swarm/swarm_qa/: __init__.py  client.py  config.py  extract.py  models.py  pipeline.py  regression.py
qa-swarm/swarm_qa/agents/: __init__.py  evaluator.py  executor.py  generator.py  reporter.py
qa-swarm/swarm_qa/channels/: __init__.py  api_channel.py  mobile_channel.py  web_channel.py
qa-swarm/swarm_qa/corpus/: scenarios.json
qa-swarm/swarm_qa/scoring/: __init__.py  metrics.py
qa-swarm/tests/: test_api_channel.py  test_extract.py  test_pipeline.py  test_regression.py
scripts/: pull_models.ps1
services/agent-financial/: pyproject.toml
services/agent-financial/src/agent_financial/: agent.py  main.py  tools.py
services/agent-financial/tests/: test_financial_agent.py
services/voice/: pyproject.toml
(+22 files in other folders)
