[project]
name = "qa-swarm"
version = "0.1.0"
description = "Autonomous testing backoffice (OpenAI Swarm + Ollama) that tests the conversational agent across API / Web / Mobile."
requires-python = ">=3.12"
dependencies = [
    "swarm",
    "openai>=1.33",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
web = ["playwright>=1.40"]
mobile = ["Appium-Python-Client>=4.0", "selenium>=4.20"]
report = ["plotly>=5.20", "jinja2>=3.1"]
metrics = ["sacrebleu>=2.4", "rouge-score>=0.1.2"]
backoffice = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "jinja2>=3.1"]

# OpenAI Swarm is GitHub-only (archived in favour of the Agents SDK, but faithful to
# the Value reference deck). uv resolves it from source.
[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["swarm_qa", "backoffice"]
